[gd_scene load_steps=35 format=3 uid="uid://cgu3ji60tm3s6"]

[ext_resource type="Script" path="res://MGF Scene/Main Game/MainGameUI.gd" id="1"]
[ext_resource type="PackedScene" uid="uid://i6usxc4ww8te" path="res://MGF Scene/Main Game/MatchDetail.tscn" id="2"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCN.tres" id="3"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UI.tres" id="4"]
[ext_resource type="Gradient" path="res://Assets2D/Theme/GradientPowerBar.tres" id="5"]
[ext_resource type="Texture2D" uid="uid://b5i8y6x1kqdfn" path="res://Assets2D/PlayerIcon/Low/00026-1267103833.png" id="6"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/PlayerStats.tres" id="7"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeam.tres" id="9"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamCN.tres" id="10"]
[ext_resource type="PackedScene" uid="uid://dskfqlx77xcvy" path="res://MGF Scene/Main Game/TeamAction.tscn" id="11"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamCP.tres" id="12"]
[ext_resource type="Texture2D" uid="uid://tra8ndcv8p68" path="res://Assets2D/TeamLogo/Low/CB.png" id="13"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/GameSpeed.gd" id="14"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/score_font.tres" id="16"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnRedCP.tres" id="17"]
[ext_resource type="PackedScene" uid="uid://bs4jigy8rr3ae" path="res://MGF Scene/Formation/Formation.tscn" id="20"]
[ext_resource type="Texture2D" uid="uid://c31n8qoq1b5qu" path="res://Assets2D/UI/iconMenu.png" id="21"]
[ext_resource type="Texture2D" uid="uid://gqd7kxq1otk6" path="res://Assets2D/UI/iconMovement.png" id="22"]
[ext_resource type="FontFile" path="res://Assets2D/Fonts/UILarge.tres" id="23"]
[ext_resource type="PackedScene" uid="uid://dxthojl7my4wq" path="res://MGF Scene/Main Game/ReplayPlayer.tscn" id="24"]
[ext_resource type="Texture2D" uid="uid://b6m0p61qkdgy0" path="res://Assets2D/UI/iconTest.png" id="25"]
[ext_resource type="Script" path="res://MGF Scene/Main Game/ProgressTurn.gd" id="26"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamPlayerGoal.tres" id="27"]
[ext_resource type="Texture2D" uid="uid://ba2hbny8gk5aj" path="res://Assets2D/UI/iconPlay.png" id="28"]
[ext_resource type="Script" path="res://addons/mgf_tools/ButtonToggle.gd" id="30"]
[ext_resource type="Texture2D" uid="uid://db2enp2x7akio" path="res://Assets2D/UI/IconMoveRight.png" id="31"]
[ext_resource type="Texture2D" uid="uid://605a7mgrfj8j" path="res://Assets2D/UI/iconNormalForward.png" id="32"]
[ext_resource type="PackedScene" path="res://MGF Scene/Main Game/BlvVoice.tscn" id="33"]
[ext_resource type="PackedScene" path="res://MGF Scene/MiniMap/MiniMap.tscn" id="34"]
[ext_resource type="PackedScene" path="res://addons/ACVoice/ACVoicebox.tscn" id="36"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUIBGO.tres" id="37"]
[ext_resource type="Texture2D" uid="uid://dcf8vhh2mshf8" path="res://Assets2D/UI/iconBall.png" id="38"]
[ext_resource type="Texture2D" uid="uid://drtj8ibugo33u" path="res://Assets2D/UI/IconCardFoul.png" id="39"]
[ext_resource type="StyleBox" path="res://Assets2D/Theme/btnUITeamPlayerFouls.tres" id="41"]

[node name="MainGameUI" type="CanvasLayer"]
process_mode = 3
script = ExtResource("1")

[node name="PanelScore" type="Panel" parent="."]
offset_left = 64.0
offset_top = 24.0
offset_right = 270.001
offset_bottom = 99.0001
mouse_filter = 2
theme_override_styles/panel = ExtResource("9")

[node name="Score" type="HBoxContainer" parent="PanelScore"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/separation = 8
alignment = 1

[node name="Teamselect1" type="TextureRect" parent="PanelScore/Score"]
custom_minimum_size = Vector2(64, 54)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("13")
expand_mode = 1
stretch_mode = 6

[node name="teamGoal1" type="Label" parent="PanelScore/Score"]
process_priority = -5
layout_mode = 2
theme_override_fonts/font = ExtResource("16")
text = "0"

[node name="space" type="Label" parent="PanelScore/Score"]
process_priority = -5
layout_mode = 2
theme_override_fonts/font = ExtResource("16")
text = "-"

[node name="teamGoal2" type="Label" parent="PanelScore/Score"]
process_priority = -5
layout_mode = 2
theme_override_fonts/font = ExtResource("16")
text = "0"

[node name="Teamselect2" type="TextureRect" parent="PanelScore/Score"]
custom_minimum_size = Vector2(64, 64)
layout_mode = 2
mouse_filter = 2
texture = ExtResource("13")
expand_mode = 1
stretch_mode = 6

[node name="BlvVoice" parent="." instance=ExtResource("33")]
offset_left = 336.0
offset_top = 24.0
offset_right = 640.0
offset_bottom = 96.0

[node name="BarInfo" type="Panel" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -192.0
offset_top = 32.0
offset_right = 192.0
offset_bottom = 88.0
scale = Vector2(0.998767, 1)
mouse_filter = 2
theme_override_styles/panel = ExtResource("9")

[node name="ProgressTurn" type="ProgressBar" parent="BarInfo"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -79.8617
offset_top = -12.0
offset_right = 120.137
offset_bottom = 12.0
mouse_filter = 2
theme_override_fonts/font = ExtResource("4")
step = 0.1
value = 50.0
script = ExtResource("26")
gradient = ExtResource("5")

[node name="Timer" type="Timer" parent="BarInfo/ProgressTurn"]
wait_time = 0.05
autostart = true

[node name="Margin" type="MarginContainer" parent="BarInfo"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_top = -35.0
offset_right = 112.0
offset_bottom = 36.0
mouse_filter = 2
theme_override_constants/margin_left = 20
theme_override_constants/margin_top = 20
theme_override_constants/margin_right = 20
theme_override_constants/margin_bottom = 20

[node name="Time" type="Label" parent="BarInfo/Margin"]
layout_mode = 2
theme_override_fonts/font = ExtResource("4")
text = "0/90"

[node name="BtnSpeed" type="Button" parent="BarInfo"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -55.595
offset_top = -20.0
offset_right = -15.5953
offset_bottom = 20.0
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("3")
theme_override_styles/hover = ExtResource("17")
theme_override_styles/pressed = ExtResource("17")
theme_override_styles/disabled = ExtResource("3")
theme_override_styles/focus = ExtResource("3")
icon = ExtResource("32")
icon_alignment = 1
expand_icon = true
script = ExtResource("14")

[node name="PlayerGameStats" type="HBoxContainer" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_top = 112.0
offset_right = 208.0
offset_bottom = 336.0
alignment = 1

[node name="GoalInfo" type="Panel" parent="PlayerGameStats"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("27")

[node name="teamTex" type="TextureRect" parent="PlayerGameStats/GoalInfo"]
modulate = Color(1, 1, 1, 0.156863)
layout_mode = 0
anchor_left = 0.0111111
anchor_right = 0.988889
anchor_bottom = 0.75
mouse_filter = 2
texture = ExtResource("13")
expand_mode = 1

[node name="playerTex" type="TextureRect" parent="PlayerGameStats/GoalInfo"]
layout_mode = 0
anchor_left = 0.06
anchor_top = 0.107143
anchor_right = 0.94
anchor_bottom = 0.714286
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="goalInfo" type="Label" parent="PlayerGameStats/GoalInfo"]
layout_mode = 0
anchor_top = 0.625
anchor_right = 1.0
anchor_bottom = 0.892857
theme_override_fonts/font = ExtResource("23")
text = "Goal Turn 20"

[node name="playerName" type="Label" parent="PlayerGameStats/GoalInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.166667
theme_override_fonts/font = ExtResource("4")
text = "Kiếm Lứa"

[node name="goalsInfo" type="Label" parent="PlayerGameStats/GoalInfo"]
layout_mode = 0
anchor_top = 0.821429
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("4")
text = "Goal Turn 20"

[node name="PlayerGameFouls" type="HBoxContainer" parent="."]
visible = false
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -208.0
offset_top = 112.0
offset_right = 208.0
offset_bottom = 336.0
alignment = 1

[node name="FoulsInfo" type="Panel" parent="PlayerGameFouls"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 2
theme_override_styles/panel = ExtResource("41")

[node name="teamTex" type="TextureRect" parent="PlayerGameFouls/FoulsInfo"]
modulate = Color(1, 1, 1, 0.156863)
layout_mode = 0
anchor_left = 0.0111111
anchor_right = 0.988889
anchor_bottom = 0.75
mouse_filter = 2
texture = ExtResource("13")
expand_mode = 1

[node name="playerTex" type="TextureRect" parent="PlayerGameFouls/FoulsInfo"]
layout_mode = 0
anchor_left = 0.06
anchor_top = 0.107143
anchor_right = 0.94
anchor_bottom = 0.714286
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="foulInfo" type="Label" parent="PlayerGameFouls/FoulsInfo"]
layout_mode = 0
anchor_top = 0.625
anchor_right = 1.0
anchor_bottom = 0.892857
theme_override_fonts/font = ExtResource("23")
text = "Yellow Card"

[node name="playerName" type="Label" parent="PlayerGameFouls/FoulsInfo"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 0.166667
theme_override_fonts/font = ExtResource("4")
text = "Kiếm Lứa"

[node name="foulsInfo" type="Label" parent="PlayerGameFouls/FoulsInfo"]
layout_mode = 0
anchor_top = 0.821429
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("4")
text = "Fouls: 2"

[node name="Notification" type="Panel" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -152.0
offset_top = -54.0
offset_right = 152.0
offset_bottom = 58.0
mouse_filter = 2
theme_override_styles/panel = ExtResource("9")

[node name="image" type="TextureRect" parent="Notification"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 24.0
offset_top = -46.0
offset_right = 112.0
offset_bottom = 42.0
mouse_filter = 2
texture = ExtResource("13")
expand_mode = 1

[node name="text" type="Label" parent="Notification"]
layout_mode = 0
anchor_left = 1.0
anchor_top = 0.5
anchor_right = 1.0
anchor_bottom = 0.5
offset_left = -192.0
offset_top = -30.0
offset_right = -12.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("23")
text = "CB Turn"

[node name="Debug" type="Label" parent="."]
anchors_preset = 5
anchor_left = 0.5
anchor_right = 0.5
offset_left = -160.0
offset_top = 104.0
offset_right = 160.0
offset_bottom = 159.0
theme_override_fonts/font = ExtResource("4")

[node name="MiniMap" parent="." instance=ExtResource("34")]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -128.0
offset_top = -172.0
offset_right = 128.0
offset_bottom = -22.0

[node name="TeamAction" parent="MiniMap" instance=ExtResource("11")]
layout_mode = 2
isVisible = false

[node name="ReplayPlayer" parent="." instance=ExtResource("24")]
visible = false
grow_horizontal = 2
grow_vertical = 2

[node name="MainBtn" type="HBoxContainer" parent="."]
anchors_preset = 1
anchor_left = 1.0
anchor_right = 1.0
offset_left = -734.0
offset_top = 24.0
offset_right = -24.0
offset_bottom = 96.0
mouse_filter = 2
theme_override_constants/separation = 30
alignment = 2

[node name="PlayerStats" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
mouse_filter = 1
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("10")

[node name="Icon" type="TextureRect" parent="MainBtn/PlayerStats"]
layout_mode = 0
anchor_top = 0.5
anchor_bottom = 0.5
offset_left = 16.0
offset_top = -36.0
offset_right = 88.0
offset_bottom = 36.0
mouse_filter = 2
texture = ExtResource("6")
expand_mode = 1
stretch_mode = 6

[node name="Name" type="Label" parent="MainBtn/PlayerStats"]
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
offset_left = 56.0
offset_bottom = -32.0
theme_override_fonts/font = ExtResource("7")
text = "Hello"
clip_text = true

[node name="ID" type="Label" parent="MainBtn/PlayerStats"]
visible = false
layout_mode = 0
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_fonts/font = ExtResource("7")
text = "0"
clip_text = true

[node name="Goal" type="Button" parent="MainBtn/PlayerStats"]
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -20.0
offset_top = -32.0
offset_right = 28.0
offset_bottom = -8.0
mouse_filter = 2
theme_override_colors/font_disabled_color = Color(0, 0, 0, 1)
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("37")
theme_override_styles/hover = ExtResource("37")
theme_override_styles/pressed = ExtResource("37")
theme_override_styles/disabled = ExtResource("37")
theme_override_styles/focus = ExtResource("37")
text = "0"
icon = ExtResource("38")
clip_text = true
expand_icon = true

[node name="Foul" type="Button" parent="MainBtn/PlayerStats"]
modulate = Color(1, 0.843137, 0, 1)
layout_mode = 0
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = 36.0
offset_top = -32.0
offset_right = 84.0
offset_bottom = -8.0
mouse_filter = 2
theme_override_fonts/font = ExtResource("7")
theme_override_styles/normal = ExtResource("37")
theme_override_styles/hover = ExtResource("37")
theme_override_styles/pressed = ExtResource("37")
theme_override_styles/disabled = ExtResource("37")
theme_override_styles/focus = ExtResource("37")
text = "0"
icon = ExtResource("39")
clip_text = true
expand_icon = true

[node name="ACVoicebox" parent="MainBtn/PlayerStats" instance=ExtResource("36")]
bus = &"Master"

[node name="BtnTestMode" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
tooltip_text = "TestMode"
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
toggle_mode = true
icon = ExtResource("25")
icon_alignment = 1
expand_icon = true

[node name="BtnPlayReplay" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
tooltip_text = "Replay"
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
toggle_mode = true
icon = ExtResource("28")
icon_alignment = 1
expand_icon = true

[node name="BtnChangeMode" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
tooltip_text = "AutoMode"
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("12")
icon = ExtResource("31")
icon_alignment = 1
expand_icon = true
script = ExtResource("30")

[node name="BtnCamMode" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
tooltip_text = "ResetCamera"
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
icon = ExtResource("22")
icon_alignment = 1
expand_icon = true

[node name="BtnMatchDetail" type="Button" parent="MainBtn"]
custom_minimum_size = Vector2(72, 72)
layout_mode = 2
tooltip_text = "Menu"
mouse_filter = 1
theme_override_fonts/font = ExtResource("4")
theme_override_styles/normal = ExtResource("10")
theme_override_styles/hover = ExtResource("12")
theme_override_styles/pressed = ExtResource("12")
theme_override_styles/disabled = ExtResource("10")
theme_override_styles/focus = ExtResource("10")
toggle_mode = true
icon = ExtResource("21")
icon_alignment = 1
expand_icon = true

[node name="GuideMode" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="TestMode" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="PlayerInfo" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MatchDetail" parent="." instance=ExtResource("2")]
visible = false

[node name="Formation" parent="." instance=ExtResource("20")]
visible = false

[node name="PlayerPerformance" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="MatchList" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[node name="GameReward" type="Control" parent="."]
visible = false
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
mouse_filter = 2

[connection signal="value_changed" from="BarInfo/ProgressTurn" to="BarInfo/ProgressTurn" method="_on_ProgressTurn_value_changed"]
[connection signal="timeout" from="BarInfo/ProgressTurn/Timer" to="BarInfo/ProgressTurn" method="_on_Timer_timeout"]
[connection signal="pressed" from="BarInfo/BtnSpeed" to="BarInfo/BtnSpeed" method="_on_BtnSpeed_pressed"]
[connection signal="pressed" from="MainBtn/PlayerStats" to="." method="_on_player_info_pressed"]
[connection signal="pressed" from="MainBtn/BtnTestMode" to="." method="_on_BtnTestMode_pressed"]
[connection signal="pressed" from="MainBtn/BtnPlayReplay" to="." method="_on_BtnPlayReplay_pressed"]
[connection signal="pressed" from="MainBtn/BtnChangeMode" to="." method="_on_BtnChangeMode_pressed"]
[connection signal="pressed" from="MainBtn/BtnCamMode" to="." method="_on_BtnCamMode_pressed"]
[connection signal="pressed" from="MainBtn/BtnMatchDetail" to="." method="_on_BtnMatchDetail_pressed"]
